# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
